<resources>
    <string name="T_titlenotice">提示</string>
    <string name="T_titlesure">确定</string>
    <string name="T_titlecancel">取消</string>
    <string name="T_titlewarn">警告</string>
    <string name="T_titleexecute">执行</string>
    <string name="T_titleonestepexecute">单步执行</string>
    <string name="T_executeydcz">是否执行原点操作？</string>
    <string name="T_executebjcz">是否执行步进操作？</string>
    <string name="T_executezdcz">是否执行自动操作？</string>
    <string name="T_nodetailedalarmmsg">无详细警报信息</string>
    <string name="T_wificonn">请先连接主机</string>
    <string name="T_wificonnOK">当前已连接</string>
    <string name="T_wificonnsuccess">wifi连接成功</string>
    <string name="T_wificonnfail">连接失败，请确认连接正确的网络</string>
    <string name="T_wificonnfailmain">wifi链接失败Main不允许链接或者没有按允许按钮</string>
    <string name="T_wificonnmain">请按main链接允许按钮</string>
    <string name="T_wificonnNO">wifi链接已中断</string>
     <string name="T_readdatafinish">数据读取完毕</string>
    <string name="T_languageCN">当前中文无需切换</string>
    <string name="T_changeCN">已切换为中文</string>
    <string name="T_languageUS">当前英文无需切换</string>
    <string name="T_changeUS">已切换为英文</string>
    <string name="T_languageHK">当前繁体中文无需切换</string>
    <string name="T_changeHK">已切换为繁体中文</string>
    <string name="T_passwordset">密码设定</string>
    <string name="T_passwordcreate">密码创建成功</string>
    <string name="T_passworddelete">密码删除成功</string>
    <string name="T_passwordchange">密码修改成功</string>
    <string name="T_passwordcreateoperate">操作密码创建</string>
    <string name="T_passwordcreateset">设定密码创建</string>
    <string name="T_passwordcreateprogramme">编程密码创建</string>
    <string name="T_passwordputin">请输入密码，20位以内</string>
    <string name="T_passwordputinold">请输入原密码，20位以内</string>
    <string name="T_passwordputinnew">请输入新密码，20位以内</string>
    <string name="T_passwordputinerror">输入为空，不符合要求，请重新输入</string>
    <string name="T_passwordtwoputinnosame">两次输入不符，请重新输入</string>
    <string name="T_passworddeleteYN">确定删除密码？</string>
    <string name="T_passwordputinolderror">原密码输入不正确，请重新输入</string>
    <string name="T_passwordputinnewerror">新密码输入为空，请重新输入</string>
    <string name="T_passwordputinforpower">请输入操作密码以获得权限</string>
    <string name="T_passwordputinoperateerror">操作密码输入不正确，请重输入</string>
    <string name="T_oneagainexittr">再按一次退出程序</string>
    <string name="T_putinsdcard">请插入外部SD存储卡</string>
     <string name="T_newcreatefiles">新创建文件夹结构TR</string>
    <string name="T_mouldsnosame">下位机当前的模具数组与平板当前的模具数组不一致，不可正常调试！请先下载所需的模具数组！</string>
    <string name="T_alarmresume">警报履历</string>
    <string name="T_versionshow">版本显示</string>
    <string name="T_IOwatch">IO监视</string>
    <string name="T_Optionaloperate">选件操作</string>
    <string name="T_nctranslate">错误：S在END之前</string>
    <string name="T_senddata">程序错误，没有添加listener，需要修改</string>
    <string name="enable">使能</string>
    <string name="stop">停止</string>
    <string name="help">帮助</string>
    <string name="f1">F1</string>
    <string name="scramBtn1">急停1</string>
    <string name="scramBtn2">急停2</string>
    <string name="menu_exit">退出</string>
    <string name="menu_about">关于</string>
    <string name="OK">确定</string>
    <string name="CANCEL">取消</string>
    <string name="touchToAdd">点击添加</string>
    <string name="menu_mainActivity">主界面</string>
    <string name="menu_programmingActivity">编程界面</string>
    <string name="menu_settingActivity">设定界面</string>
    <string name="menu_parameterSettingActivity">参数设定界面</string>
    <string name="menu_maintainGuideActivity">维护指南界面</string>
    <string name="mechanicalParameterFolder">机械参数</string>
    <string name="mouldDataFolder">模具数据</string>
  		<string name="dataToDownloadFolder">需要下载的数据</string>
    <string name="otherParameterFolder">其他参数</string>
    <string name="tr_activity_log">TR</string>
    <string name="tr_activity_main">铁人机器人</string>
    <string name="tr_activity_welcome">铁人机器人</string>
    <string name="app_name">TR</string>
    <string name="main_jbled">警报</string>
    <string name="main_ydzled">移动中</string>
    <string name="main_zdled">自动</string>
    <string name="main_mode_jxwz">教行位置</string>
    <string name="main_mode_mjsjcz">模具数据操作</string>
    <string name="main_mode_timer">设定定时器</string>
    <string name="main_mode_counter">设定计数器</string>
    <string name="main_mode_zycz">自由操作</string>
    <string name="main_mode_ydcz">原点操作</string>
    <string name="main_mode_bjcz">步进操作</string>
    <string name="main_mode_zdcz">自动操作</string>
    <string name="main_mode_start">开始</string>
    <string name="main_mode_step_message">步进模式已开始\n　　需要连续执行步进动作时，请按画面上的【连续STEP】按钮;需要执行单步步进动作时，请按画面上的【单步STEP】按钮；\n　　按【×】或者【停止】按钮取消步进模式    </string>
    <string name="main_mjbh">模具编号：</string>
    <string name="main_mjmc">名称</string>
    <string name="main_jbxx">当前警报信息</string>
    <string name="main_counter">计数器</string>
    <string name="main_counter_outNum">取出次数</string>
    <string name="main_counter_rejectsNum">不良品次数</string>
    <string name="main_currentPosition">当前位置(mm)</string>
    <string name="main_currentPosition_foot">走行(X)</string>
    <string name="main_currentPosition_proBA">制品前后(Y)</string>
    <string name="main_currentPosition_proUD">制品上下(Z)</string>
    <string name="main_currentPosition_feedBA">料道前后(Ys)</string>
    <string name="main_currentPosition_feedUD">料道上下(Zs)</string>
    <string name="main_quikeBtn_iojs">IO监视</string>
    <string name="main_quikeBtn_wifilj">WIFI连接</string>
    <string name="main_quikeBtn_xjcz">选件操作</string>
    <string name="main_quikeBtn_czsc">操作手册</string>
    <string name="main_quikeBtn_jbll">警报履历</string>
    <string name="main_quikeBtn_yyqh">语言切换</string>
    <string name="main_quikeBtn_mmsd">密码设定</string>
    <string name="main_quikeBtn_szxtsj">上载系统数据</string>
    <string name="main_quikeBtn_dqbc">读取/保存</string>
    <string name="main_quikeBtn_fw">服务</string>
    <string name="main_quikeBtn_bbxs">版本显示</string>
    <string name="main_quikeBtn">快捷按钮</string>
    <string name="main_quikeBtn_read">读取/保存</string>
    <string name="main_quikeBtn_save">保存</string>
     <string name="main_quikeBtn_wificon">WIFI连接</string>
    <string name="main_quikeBtn_clampOpen">夹具闭</string>
    <string name="main_quikeBtn_badReset">不良复位</string>
    <string name="main_quikeBtn_outReset">取出复位</string>
    <string name="main_quikeBtn_packingReset">装箱复位</string>
    <string name="tr_activity_programming">TR_Programming</string>
    	<string name="tab_nc_find">查找内容：</string>
    	<string name="tab_nc_editfind">请输入待查找的信号名</string>
    	<string name="tab_nc_replace"> 替  换  为 ：</string>
    	<string name="tab_nc_editreplace">请输入待替换的信号名</string>
    	<string name="programming_lineOperate">行操作</string>
    	<string name="programming_newcreate">新建操作</string>
    	<string-array name="programming_array_lineOperate">
    	    <item>上面插入一行</item>
    	    <item>删除该行</item>
    	    <item>下面插入一行</item>
    	</string-array>
  		<string name="programming_batchoperation">编辑</string>
  		<string-array name="programming_array_batchoperation">
    	    <item>剪切</item>
    	    <item>复制</item>
    	    <item>粘贴</item>
    	    <item>删除</item>
    	    <item>插入</item>
    	    <item>查找/替换</item>
    	    <item>撤销</item>
    	    <item>恢复</item>
    	    <item>全选</item>
    	    <item>全不选</item>
    	    <item>反选</item>
    	</string-array>
    	<string name="programming_menu_new">新建</string>
    	<string name="programming_menu_open">打开文件</string>
	    <string name="programming_menu_save">保存</string>
	    <string name="programming_menu_saveAs">另存为</string>
	    <string name="programming_menu_del">删除</string>
	    <string name="programming_menu_connect">连接</string>
	    <string name="programming_menu_compile">编译解释</string>
	    <string name="programming_menu_test">字节发送测试</string>
	    <string name="programming_menu_jump">跳转界面</string>
	    <string name="programming_menu_exit">退出</string>
    	<string name="programming_deviceDefine">设备定义</string>
		    <string-array name="programming_array_deviceDefineList">
		        <item>实际输入</item>
		        <item>实际输出</item>
		        <item>中间输入</item>
		        <item>中间输出</item>
		        <item>数据输入</item>
		        <item>数据输出</item>
		        <item>掉电可保持寄存器</item>
		        <item>掉电可保持数据寄存器</item>
		        <item>定时器</item>
		        <item>计数器</item>
		        <item>位置</item>
		        <item>警报</item>
		        <item>选件操作</item>
		    </string-array>
        	<string name="programming_device_actualInput">实际输入</string>
        	<string name="programming_device_actualOutput">实际输出</string>
        	<string name="programming_device_middleInput">中间输入</string>
        	<string name="programming_device_middleOutput">中间输出</string>
        	<string name="programming_device_dataInput">数据输入</string>
        	<string name="programming_device_dataOutput">数据输出</string>
        	<string name="programming_device_register">掉电可保持寄存器</string>
        	<string name="programming_device_dataRegister">掉电可保持数据寄存器</string>
        	<string name="programming_device_timer">定时器</string>
        	<string name="programming_device_counter">计数器</string>
        	<string name="programming_device_position">位置</string>
        		<string name="programming_device_position_P">标准位置P</string>
        		<string name="programming_device_position_SP">标准装箱位置SP</string>
        		<string name="programming_device_position_FP">自由装箱位置FP</string>
        		<string name="programming_device_position_hint">输入范围1~200</string>
        	<string name="programming_device_alarm">警报</string>
		    <string name="programming_device_optional">选件操作</string>
    	<string name="setting_mouldnum1">模具数据编号</string>
    	<string name="setting_mouldname1">模具数据名称</string>
    	<string name="setting_editmouldnum">请添加模具数据编号</string>
    	<string name="setting_editmouldname">请添加模具数据名称</string>
    	<string name="setting_bz">标准</string>
    	<string name="setting_fb">非标</string>
	<string name="parameterSetting_num">编号</string>
    <string name="parameterSetting_content">内容</string>
    <string name="parameterSetting_setValue">设定值</string>
    <string name="parameterSetting_note">说明</string>
    <string name="parameterSetting_axle1">轴1</string>
	<string name="parameterSetting_axle2">轴2</string>
	<string name="parameterSetting_axle3">轴3</string>
	<string name="parameterSetting_axle4">轴4</string>
	<string name="parameterSetting_axle5">轴5</string>
	<string name="parameterSetting_axle6">轴6</string>
	<string name="parameterSetting_axle7">轴7</string>
	<string name="parameterSetting_axle8">轴8</string>
    <string name="parameterSetting_saveToMain">保存</string>
    <string name="parameterSetting_saveasToMain">另存为</string>
    <string name="parameterSetting_deleteMain">删除</string>
    <string name="ckBox_CPU">CPU系统程序</string>
    <string name="ckBox_PPU">PPU系统程序</string>
    <string name="ckBox_SPU">SPU系统程序</string>
    <string name="ckBox_IO">IO系统程序</string>
    <string name="ckBox_mould">模具数据</string>
    <string name="ckBox_mechanical">机械参数</string>
    <string name="ckBox_sys">系统参数</string>
    <string name="downloadToMain">下载到基板</string>
    <string name="readFromMain">从基板读出</string>
    <string name="fromsd"> 从SD卡下载</string>
    <string name="tosd"> 上载到SD卡</string>
     <string name="selectAll_downloadManagement">全选</string>
     <string name="cancelAll_downloadManagement">取消</string>
     <string name="parameterSetting_address">地址：</string>
     <string name="parameterSetting_editaddress">请输入地址</string>
     <string name="parameterSetting_sl">十六进制</string>
     <string name="parameterSetting_length">长度：</string>
     <string name="parameterSetting_editlength">请输入长度</string>
     <string name="parameterSetting_s">十进制   </string>
    <string name="io_address">地址</string>
    <string name="i_symbolName">输入设备符号名</string>
    <string name="i_signalName">输入设备信号名</string>
    <string name="i_state">输入设备状态</string>
    <string name="o_symbolName">输出设备符号名</string>
    <string name="o_signalName">输出设备信号名</string>
    <string name="o_state">输出设备状态</string>
</resources>