<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
         <LinearLayout
         android:id="@+id/linearlayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/black" >

         <TextView
             android:id="@+id/textView1"
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/gray"
             android:gravity="center"
             android:text="@string/io_address" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/gray"
             android:gravity="center"
             android:text="@string/i_symbolName" />

         <TextView
             android:id="@+id/textView3"
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/gray"
             android:gravity="center"
             android:text="@string/i_signalName" />
         <TextView
             android:id="@+id/textView4"
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/gray"
             android:gravity="center"
             android:text="@string/i_state" />
         
         <TextView
             android:id="@+id/textView5"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/gray"
             android:gravity="center"
             android:text="@string/o_symbolName" />

         <TextView
             android:id="@+id/textView6"
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/gray"
             android:gravity="center"
             android:text="@string/o_signalName" />
         <TextView
             android:id="@+id/textView7"
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/gray"
             android:gravity="center"
             android:text="@string/o_state" />
    </LinearLayout>
        <ListView
         android:id="@+id/listView_io"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

     </ListView>

</LinearLayout>