<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/black" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/parameterSetting_num" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/parameterSetting_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/parameterSetting_setValue" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="4"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/parameterSetting_note" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_mechanicalpara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RelativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title" >

    </ListView>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >
        
        <Spinner
            android:id="@+id/spinner_mechanicalpara"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_saveMain_MechanicalPara"
            android:layout_centerVertical="true"
            android:layout_gravity="center|right"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/button_saveMain_MechanicalPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_saveasMain_MechanicalPara"
            android:layout_centerVertical="true"
            android:layout_gravity="center|right"
            android:layout_marginRight="20dp"
            android:text="@string/parameterSetting_saveToMain" />
         <Button
            android:id="@+id/button_saveasMain_MechanicalPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_deleteMain_MechanicalPara"
            android:layout_centerVertical="true"
            android:layout_gravity="center|right"
            android:layout_marginRight="20dp"
            android:text="@string/parameterSetting_saveasToMain" />
          <Button
            android:id="@+id/button_deleteMain_MechanicalPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center|right"
            android:layout_marginRight="30dp"
            android:text="@string/parameterSetting_deleteMain" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox_axle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/parameterSetting_axle1" />

                <CheckBox
                    android:id="@+id/checkBox_axle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:checked="true"
                    android:text="@string/parameterSetting_axle2" />

                <CheckBox
                    android:id="@+id/checkBox_axle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:checked="true"
                    android:text="@string/parameterSetting_axle3" />

                <CheckBox
                    android:id="@+id/checkBox_axle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:checked="true"
                    android:text="@string/parameterSetting_axle4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox_axle5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/parameterSetting_axle5" />

                <CheckBox
                    android:id="@+id/checkBox_axle6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:checked="false"
                    android:text="@string/parameterSetting_axle6" />

                <CheckBox
                    android:id="@+id/checkBox_axle7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:checked="false"
                    android:text="@string/parameterSetting_axle7" />

                <CheckBox
                    android:id="@+id/checkBox_axle8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:checked="false"
                    android:text="@string/parameterSetting_axle8" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>